--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,56 @@
-/* You can add global styles to this file, and also import other style files */
+@import 'index';
+
+html,
+body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  font-family: 'Montserrat', sans-serif;
+}
+
+.form-control {
+  padding: 10px;
+  margin: 10px 0;
+  border-radius: 10px;
+  border: 1px solid $background-light-gray;
+
+  &:focus,
+  &:active {
+    outline: 0;
+  }
+}
+
+.btn {
+  padding: 10px 20px;
+  color: white;
+  border-radius: 5px;
+  outline: none;
+  cursor: pointer;
+  font-size: 1rem;
+  font-family: 'Poppins', sans-serif !important;
+
+  &:disabled,
+  &[disabled] {
+    cursor: auto;
+  }
+}
+
+.btn.btn-primary {
+  background-color: $primary;
+  border: 1px solid $primary;
+
+  &:hover {
+    background-color: darken($primary, 10%);
+  }
+}
+
+.btn.btn-outline-primary {
+  background-color: transparent;
+  border: 1px solid $primary;
+  color: $primary;
+
+  &:hover {
+    background-color: $primary;
+    color: white;
+  }
+}
