--- a/src/app/core/login/login.component.html
+++ b/src/app/core/login/login.component.html
@@ -1,9 +1,9 @@
 <div class="content">
     <div class="d-flex justify-content-center">
         <label for="user">Email:</label>
-        <input type="email" class="form-control" id="user" />
+        <input [formControl]="emailControl" type="email" class="form-control" id="user" />
         <label for="pass">Senha:</label>
-        <input type="password" class="form-control" id="pass" />
+        <input [formControl]="senhaControl" type="password" class="form-control" id="pass" />
     </div>
     <div class="text-center mt-4">
         <button (click)="login()" class="btn btn-primary">Acessar o sistema</button>
