--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,6 +6,9 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Montserrat', sans-serif;
+  @include phone {
+    font-size: 13px;
+  }
 }
 
 .form-control {
